--- a/CheckPointI/style.css
+++ b/CheckPointI/style.css
@@ -112,6 +112,15 @@ h1{
     margin-top: 6px;
     color: #FF6666;
     font-size: 13px;
+    display:none;
+}
+
+.errorVisible{
+    display: flex;
+    align-items: center;
+    margin-top: 6px;
+    color: #FF6666;
+    font-size: 13px;
     /*display:none;*/
 }
 
@@ -137,7 +146,7 @@ h1{
 }
 
 
-.button input:hover {
+.button :hover {
     background-color: #1d6621;
 }
 
